	- added buildarch/buildos compatibility tables, listed values
	  in --showrc
	- added cpio archive building code; GNU cpio is no longer used!
	  packages created w/ rpm 2.4.4 and later cannot be installed with
	  rpm 2.4 - rpm 2.4.3 however (version of RPM before 2.4 will 
	  work fine, however). An "error -2 reading header" happens when
	  this is attempted

2.4.2 -> 2.4.3:
	- implemented install time prerequisites
	- repaired %{#TAG} query format
	- implemented ternary operator as query expression
	- fixed --scripts to only print information on scripts which
	  are present
	- check symlink() return for < 0, not != 0 (Bob Tanner)
	- uses chroot() for installs --root option
	- archive expansion doesn't create new devices or symlinks when
	  the proper files already exist
	- added -p to %post (etc) to specify the program which a script
	  is run through
	- if -p is used w/ an empty script, the specified program is
	  executed directly 
	- the -p argument (or /bin/sh) is automaticall added as a prereq

2.4.1 -> 2.4.2:
	- completely rewrote queryformat code
	- added fsnames, fssizes virtual query tags
	- added rpmdbFindByHeader() and rpmdbFindByTag() public functions
	- added rpmfilename tag to rpmrc to define the filename format to
	  use for binary packages (note the rpmdir is prepended to it)
	- used pclose() instead of fclose() in -t code
	- updated man pages
	- changed "struct rpmdb" to "struct rpmdb_s" for C++
	- netsharedpath entries shouldn't match partial directory names
	  anymore (a nersharedpath of /usr/lib shouldn't affect /usr/libexec)
	- don't backup config files on netsharedpaths (take 2)
	- added "day" query format which is like date, but doesn't print
	  any time
	- added --changelog alias to query a packages changelog entry
	- added mntctl() support for AIX (I think, I can't test this)
	- fflags query type displays 's' for specfiles, 'm' for missingok
	  files, and 'n' for noreplace files
	- implemented %config(missingok) flag in install